QtBeef/src/Qt/qtextedit.bf

extension CQt
{
	[LinkName("QTextEdit_new")]
	public static extern QTextEdit_Ptr* QTextEdit_new(QWidget_Ptr* parent);
	[LinkName("QTextEdit_new2")]
	public static extern QTextEdit_Ptr* QTextEdit_new2();
	[LinkName("QTextEdit_new3")]
	public static extern QTextEdit_Ptr* QTextEdit_new3(libqt_string* text);
	[LinkName("QTextEdit_new4")]
	public static extern QTextEdit_Ptr* QTextEdit_new4(libqt_string* text, QWidget_Ptr* parent);
	[LinkName("QTextEdit_Delete")]
	public static extern void QTextEdit_Delete(QTextEdit_Ptr* self);
	[LinkName("QTextEdit_MetaObject")]
	public static extern QMetaObject_Ptr* QTextEdit_MetaObject(QTextEdit_Ptr* self);
	[LinkName("QTextEdit_Qt_Metacast")]
	public static extern void* QTextEdit_Qt_Metacast(QTextEdit_Ptr* self, c_char* param1);
	[LinkName("QTextEdit_Qt_Metacall")]
	public static extern c_int QTextEdit_Qt_Metacall(QTextEdit_Ptr* self, QMetaObject_Call param1, c_int param2, void** param3);
	[LinkName("QTextEdit_Tr")]
	public static extern libqt_string QTextEdit_Tr(c_char* s);
	[LinkName("QTextEdit_SetDocument")]
	public static extern void QTextEdit_SetDocument(QTextEdit_Ptr* self, QTextDocument_Ptr* document);
	[LinkName("QTextEdit_Document")]
	public static extern QTextDocument_Ptr* QTextEdit_Document(QTextEdit_Ptr* self);
	[LinkName("QTextEdit_SetPlaceholderText")]
	public static extern void QTextEdit_SetPlaceholderText(QTextEdit_Ptr* self, libqt_string* placeholderText);
	[LinkName("QTextEdit_PlaceholderText")]
	public static extern libqt_string QTextEdit_PlaceholderText(QTextEdit_Ptr* self);
	[LinkName("QTextEdit_SetTextCursor")]
	public static extern void QTextEdit_SetTextCursor(QTextEdit_Ptr* self, QTextCursor_Ptr* cursor);
	[LinkName("QTextEdit_TextCursor")]
	public static extern QTextCursor_Ptr QTextEdit_TextCursor(QTextEdit_Ptr* self);
	[LinkName("QTextEdit_IsReadOnly")]
	public static extern bool QTextEdit_IsReadOnly(QTextEdit_Ptr* self);
	[LinkName("QTextEdit_SetReadOnly")]
	public static extern void QTextEdit_SetReadOnly(QTextEdit_Ptr* self, bool ro);
	[LinkName("QTextEdit_SetTextInteractionFlags")]
	public static extern void QTextEdit_SetTextInteractionFlags(QTextEdit_Ptr* self, void* flags);
	[LinkName("QTextEdit_TextInteractionFlags")]
	public static extern void* QTextEdit_TextInteractionFlags(QTextEdit_Ptr* self);
	[LinkName("QTextEdit_FontPointSize")]
	public static extern double QTextEdit_FontPointSize(QTextEdit_Ptr* self);
	[LinkName("QTextEdit_FontFamily")]
	public static extern libqt_string QTextEdit_FontFamily(QTextEdit_Ptr* self);
	[LinkName("QTextEdit_FontWeight")]
	public static extern c_int QTextEdit_FontWeight(QTextEdit_Ptr* self);
	[LinkName("QTextEdit_FontUnderline")]
	public static extern bool QTextEdit_FontUnderline(QTextEdit_Ptr* self);
	[LinkName("QTextEdit_FontItalic")]
	public static extern bool QTextEdit_FontItalic(QTextEdit_Ptr* self);
	[LinkName("QTextEdit_TextColor")]
	public static extern QColor_Ptr QTextEdit_TextColor(QTextEdit_Ptr* self);
	[LinkName("QTextEdit_TextBackgroundColor")]
	public static extern QColor_Ptr QTextEdit_TextBackgroundColor(QTextEdit_Ptr* self);
	[LinkName("QTextEdit_CurrentFont")]
	public static extern QFont_Ptr QTextEdit_CurrentFont(QTextEdit_Ptr* self);
	[LinkName("QTextEdit_Alignment")]
	public static extern void* QTextEdit_Alignment(QTextEdit_Ptr* self);
	[LinkName("QTextEdit_MergeCurrentCharFormat")]
	public static extern void QTextEdit_MergeCurrentCharFormat(QTextEdit_Ptr* self, QTextCharFormat_Ptr* modifier);
	[LinkName("QTextEdit_SetCurrentCharFormat")]
	public static extern void QTextEdit_SetCurrentCharFormat(QTextEdit_Ptr* self, QTextCharFormat_Ptr* format);
	[LinkName("QTextEdit_CurrentCharFormat")]
	public static extern QTextCharFormat_Ptr QTextEdit_CurrentCharFormat(QTextEdit_Ptr* self);
	[LinkName("QTextEdit_AutoFormatting")]
	public static extern void* QTextEdit_AutoFormatting(QTextEdit_Ptr* self);
	[LinkName("QTextEdit_SetAutoFormatting")]
	public static extern void QTextEdit_SetAutoFormatting(QTextEdit_Ptr* self, void* features);
	[LinkName("QTextEdit_TabChangesFocus")]
	public static extern bool QTextEdit_TabChangesFocus(QTextEdit_Ptr* self);
	[LinkName("QTextEdit_SetTabChangesFocus")]
	public static extern void QTextEdit_SetTabChangesFocus(QTextEdit_Ptr* self, bool b);
	[LinkName("QTextEdit_SetDocumentTitle")]
	public static extern void QTextEdit_SetDocumentTitle(QTextEdit_Ptr* self, libqt_string* title);
	[LinkName("QTextEdit_DocumentTitle")]
	public static extern libqt_string QTextEdit_DocumentTitle(QTextEdit_Ptr* self);
	[LinkName("QTextEdit_IsUndoRedoEnabled")]
	public static extern bool QTextEdit_IsUndoRedoEnabled(QTextEdit_Ptr* self);
	[LinkName("QTextEdit_SetUndoRedoEnabled")]
	public static extern void QTextEdit_SetUndoRedoEnabled(QTextEdit_Ptr* self, bool enable);
	[LinkName("QTextEdit_LineWrapMode")]
	public static extern QTextEdit_LineWrapMode QTextEdit_LineWrapMode(QTextEdit_Ptr* self);
	[LinkName("QTextEdit_SetLineWrapMode")]
	public static extern void QTextEdit_SetLineWrapMode(QTextEdit_Ptr* self, QTextEdit_LineWrapMode mode);
	[LinkName("QTextEdit_LineWrapColumnOrWidth")]
	public static extern c_int QTextEdit_LineWrapColumnOrWidth(QTextEdit_Ptr* self);
	[LinkName("QTextEdit_SetLineWrapColumnOrWidth")]
	public static extern void QTextEdit_SetLineWrapColumnOrWidth(QTextEdit_Ptr* self, c_int w);
	[LinkName("QTextEdit_WordWrapMode")]
	public static extern QTextOption_WrapMode QTextEdit_WordWrapMode(QTextEdit_Ptr* self);
	[LinkName("QTextEdit_SetWordWrapMode")]
	public static extern void QTextEdit_SetWordWrapMode(QTextEdit_Ptr* self, QTextOption_WrapMode policy);
	[LinkName("QTextEdit_Find")]
	public static extern bool QTextEdit_Find(QTextEdit_Ptr* self, libqt_string* exp);
	[LinkName("QTextEdit_Find2")]
	public static extern bool QTextEdit_Find2(QTextEdit_Ptr* self, QRegularExpression_Ptr* exp);
	[LinkName("QTextEdit_ToPlainText")]
	public static extern libqt_string QTextEdit_ToPlainText(QTextEdit_Ptr* self);
	[LinkName("QTextEdit_ToHtml")]
	public static extern libqt_string QTextEdit_ToHtml(QTextEdit_Ptr* self);
	[LinkName("QTextEdit_ToMarkdown")]
	public static extern libqt_string QTextEdit_ToMarkdown(QTextEdit_Ptr* self);
	[LinkName("QTextEdit_EnsureCursorVisible")]
	public static extern void QTextEdit_EnsureCursorVisible(QTextEdit_Ptr* self);
	[LinkName("QTextEdit_LoadResource")]
	public static extern QVariant_Ptr QTextEdit_LoadResource(QTextEdit_Ptr* self, c_int type, QUrl_Ptr* name);
	[LinkName("QTextEdit_CreateStandardContextMenu")]
	public static extern QMenu_Ptr* QTextEdit_CreateStandardContextMenu(QTextEdit_Ptr* self);
	[LinkName("QTextEdit_CreateStandardContextMenu2")]
	public static extern QMenu_Ptr* QTextEdit_CreateStandardContextMenu2(QTextEdit_Ptr* self, QPoint_Ptr* position);
	[LinkName("QTextEdit_CursorForPosition")]
	public static extern QTextCursor_Ptr QTextEdit_CursorForPosition(QTextEdit_Ptr* self, QPoint_Ptr* pos);
	[LinkName("QTextEdit_CursorRect")]
	public static extern QRect_Ptr QTextEdit_CursorRect(QTextEdit_Ptr* self, QTextCursor_Ptr* cursor);
	[LinkName("QTextEdit_CursorRect2")]
	public static extern QRect_Ptr QTextEdit_CursorRect2(QTextEdit_Ptr* self);
	[LinkName("QTextEdit_AnchorAt")]
	public static extern libqt_string QTextEdit_AnchorAt(QTextEdit_Ptr* self, QPoint_Ptr* pos);
	[LinkName("QTextEdit_OverwriteMode")]
	public static extern bool QTextEdit_OverwriteMode(QTextEdit_Ptr* self);
	[LinkName("QTextEdit_SetOverwriteMode")]
	public static extern void QTextEdit_SetOverwriteMode(QTextEdit_Ptr* self, bool overwrite);
	[LinkName("QTextEdit_TabStopDistance")]
	public static extern double QTextEdit_TabStopDistance(QTextEdit_Ptr* self);
	[LinkName("QTextEdit_SetTabStopDistance")]
	public static extern void QTextEdit_SetTabStopDistance(QTextEdit_Ptr* self, double distance);
	[LinkName("QTextEdit_CursorWidth")]
	public static extern c_int QTextEdit_CursorWidth(QTextEdit_Ptr* self);
	[LinkName("QTextEdit_SetCursorWidth")]
	public static extern void QTextEdit_SetCursorWidth(QTextEdit_Ptr* self, c_int width);
	[LinkName("QTextEdit_AcceptRichText")]
	public static extern bool QTextEdit_AcceptRichText(QTextEdit_Ptr* self);
	[LinkName("QTextEdit_SetAcceptRichText")]
	public static extern void QTextEdit_SetAcceptRichText(QTextEdit_Ptr* self, bool accept);
	[LinkName("QTextEdit_SetExtraSelections")]
	public static extern void QTextEdit_SetExtraSelections(QTextEdit_Ptr* self, void** selections);
	[LinkName("QTextEdit_ExtraSelections")]
	public static extern void* QTextEdit_ExtraSelections(QTextEdit_Ptr* self);
	[LinkName("QTextEdit_MoveCursor")]
	public static extern void QTextEdit_MoveCursor(QTextEdit_Ptr* self, QTextCursor_MoveOperation operation);
	[LinkName("QTextEdit_CanPaste")]
	public static extern bool QTextEdit_CanPaste(QTextEdit_Ptr* self);
	[LinkName("QTextEdit_Print")]
	public static extern void QTextEdit_Print(QTextEdit_Ptr* self, QPagedPaintDevice_Ptr* printer);
	[LinkName("QTextEdit_InputMethodQuery")]
	public static extern QVariant_Ptr QTextEdit_InputMethodQuery(QTextEdit_Ptr* self, Qt_InputMethodQuery property);
	[LinkName("QTextEdit_InputMethodQuery2")]
	public static extern QVariant_Ptr QTextEdit_InputMethodQuery2(QTextEdit_Ptr* self, Qt_InputMethodQuery query, QVariant_Ptr argument);
	[LinkName("QTextEdit_SetFontPointSize")]
	public static extern void QTextEdit_SetFontPointSize(QTextEdit_Ptr* self, double s);
	[LinkName("QTextEdit_SetFontFamily")]
	public static extern void QTextEdit_SetFontFamily(QTextEdit_Ptr* self, libqt_string* fontFamily);
	[LinkName("QTextEdit_SetFontWeight")]
	public static extern void QTextEdit_SetFontWeight(QTextEdit_Ptr* self, c_int w);
	[LinkName("QTextEdit_SetFontUnderline")]
	public static extern void QTextEdit_SetFontUnderline(QTextEdit_Ptr* self, bool b);
	[LinkName("QTextEdit_SetFontItalic")]
	public static extern void QTextEdit_SetFontItalic(QTextEdit_Ptr* self, bool b);
	[LinkName("QTextEdit_SetTextColor")]
	public static extern void QTextEdit_SetTextColor(QTextEdit_Ptr* self, QColor_Ptr* c);
	[LinkName("QTextEdit_SetTextBackgroundColor")]
	public static extern void QTextEdit_SetTextBackgroundColor(QTextEdit_Ptr* self, QColor_Ptr* c);
	[LinkName("QTextEdit_SetCurrentFont")]
	public static extern void QTextEdit_SetCurrentFont(QTextEdit_Ptr* self, QFont_Ptr* f);
	[LinkName("QTextEdit_SetAlignment")]
	public static extern void QTextEdit_SetAlignment(QTextEdit_Ptr* self, void* a);
	[LinkName("QTextEdit_SetPlainText")]
	public static extern void QTextEdit_SetPlainText(QTextEdit_Ptr* self, libqt_string* text);
	[LinkName("QTextEdit_SetHtml")]
	public static extern void QTextEdit_SetHtml(QTextEdit_Ptr* self, libqt_string* text);
	[LinkName("QTextEdit_SetMarkdown")]
	public static extern void QTextEdit_SetMarkdown(QTextEdit_Ptr* self, libqt_string* markdown);
	[LinkName("QTextEdit_SetText")]
	public static extern void QTextEdit_SetText(QTextEdit_Ptr* self, libqt_string* text);
	[LinkName("QTextEdit_Cut")]
	public static extern void QTextEdit_Cut(QTextEdit_Ptr* self);
	[LinkName("QTextEdit_Copy")]
	public static extern void QTextEdit_Copy(QTextEdit_Ptr* self);
	[LinkName("QTextEdit_Paste")]
	public static extern void QTextEdit_Paste(QTextEdit_Ptr* self);
	[LinkName("QTextEdit_Undo")]
	public static extern void QTextEdit_Undo(QTextEdit_Ptr* self);
	[LinkName("QTextEdit_Redo")]
	public static extern void QTextEdit_Redo(QTextEdit_Ptr* self);
	[LinkName("QTextEdit_Clear")]
	public static extern void QTextEdit_Clear(QTextEdit_Ptr* self);
	[LinkName("QTextEdit_SelectAll")]
	public static extern void QTextEdit_SelectAll(QTextEdit_Ptr* self);
	[LinkName("QTextEdit_InsertPlainText")]
	public static extern void QTextEdit_InsertPlainText(QTextEdit_Ptr* self, libqt_string* text);
	[LinkName("QTextEdit_InsertHtml")]
	public static extern void QTextEdit_InsertHtml(QTextEdit_Ptr* self, libqt_string* text);
	[LinkName("QTextEdit_Append")]
	public static extern void QTextEdit_Append(QTextEdit_Ptr* self, libqt_string* text);
